<resources>
    <string name="app_name">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or_sign_in_with">or Sign in with</string>
    <string name="email">email</string>
    <string name="name">Name</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome">Welcome</string>
</resources>